Project/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-deployment
  namespace: microapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment
  template:
    metadata:
      labels:
        app: appointment
    spec:
      containers:
      - name: appointment-app
        image: 8555936327/appointment:latest
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
