Project/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: microapp1
spec:
  type: LoadBalancer
  selector:
    app: patient
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
