Project/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp-ingress
  namespace: microapp1
spec:
  ingressClassName: nginx
  rules:
    - host: microapps.com
      http:
        paths:
        - path: /appointments
          pathType: Prefix
          backend:
            service:
              name: appointment-service
              port:
                number: 80
        - path: /patients
          pathType: Prefix
          backend:
            service:
              name: patient-service
              port:
                number: 80
